syntax = "proto3";

package com.example.protos;

service Registrator {
  rpc Register (RegisterRequest) returns (RegisterReply) {}
}

message RegisterRequest {
  string address = 1;
}

message RegisterReply {
  bool registered = 1;
}